# engula-apis

./: Cargo.toml  README.md  build.rs
engula/v1/: collection.proto  database.proto  engula.proto  expr.proto  mutate.proto  select.proto  txn.proto  universe.proto  value.proto
engula/v1alpha/: database.proto  engula.proto  txn.proto  universe.proto
proto/: collections.proto  database.proto  databases.proto  engula.proto  txn.proto  universe.proto
proto/object/: base.proto  expr.proto  function.proto  json.proto  numeric.proto  object.proto  spec.proto  value.proto
src/: blob.rs  bool.rs  f64.rs  i64.rs  lib.rs  list.rs  map.rs  range.rs  set.rs  text.rs  v1.rs  value.rs
src/v1/: any.rs  blob.rs  bool.rs  expr.rs  list.rs  map.rs  mod.rs  range.rs  set.rs  value.rs
