[package]
name = "engula-proto"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula-proto"
description = "Public protobuf definitions of Engula."

[dependencies]
prost = "0.9"
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
