[package]
name = "engula-apis"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula-apis"
description = "Public interface definitions of Engula APIs."

[dependencies]
prost = "0.9"
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
